--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ async-timeout==3.0.1
 attrs==19.3.0
 beautifulsoup4==4.9.0
 certifi==2020.4.5.1
+cffi==1.14.0
 chardet==3.0.4
 discord.py==1.3.3
 fake-useragent==0.1.11
@@ -11,6 +12,8 @@ Google-Search-API==1.1.14
 idna==2.9
 idna-ssl==1.1.0
 multidict==4.7.5
+pycparser==2.20
+PyNaCl==1.3.0
 python-decouple==3.3
 PyYAML==5.3.1
 requests==2.23.0
